# AIGuard

./: Cargo.toml  DEPLOY_CONFIG.md  FINAL_REPORT_360.md  LEGAL_V12.md  RUST_ENGINE.md  index.html  legal.html  test_ai.txt  verify_legal.py
backup_v3_1/: Cargo.toml  FRONTEND_CORE.md  INSTRUCTIONS.md  README.md  index.html
backup_v3_1/.github/workflows/: rust-windows.yml
backup_v3_1/factory/operai/: archivista.md  tutor.md
backup_v3_1/marketing/locales/en/: SECURITY_STANDARDS.md  VIRAL_KIT.md
backup_v3_1/marketing/locales/es/: SECURITY_STANDARDS.md
backup_v3_1/marketing/viral/: SOCIAL_KIT.md
backup_v3_1/src/: forensics.rs  i18n.rs  watcher.rs
backup_v3_1/src/locales/: de.toml
backup_v3_1/tests/: integration_test.rs
factory/operai/: ispettore.md  sentinella.md
logs/: BUG_HISTORY.md  CAMPAIGN_HISTORY.md  FINAL_REPORT_360.md  LEGAL_HISTORY.md  SECURITY_HISTORY.md
marketing/locales/de/: SECURITY_STANDARDS.md  VIRAL_KIT.md
marketing/locales/es/: VIRAL_KIT.md
marketing/locales/fr/: SECURITY_STANDARDS.md  VIRAL_KIT.md
marketing/viral/: REDDIT_POSTS.md
marketing/white-paper/: SECURITY_STANDARDS.md
src/: behavioral_analysis.rs  lib.rs  main.rs  process_scanner.rs  tray.rs  watcher.rs
src/locales/: en.toml  es.toml  fr.toml  it.toml
tests/: verify_exposure_tool.spec.ts
