[package]
name = "aiguard-windows-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "aiguard_windows_core"
path = "src/lib.rs"

[[bin]]
name = "aiguard-windows-core"
path = "src/main.rs"

[dependencies]
notify = "8.0.0"
sysinfo = "0.33.1"
tray-icon = "0.19.2"
winit = "0.30.8"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.17.1"
