[package]
name = "aiguard-windows-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "aiguard_windows_core"
path = "src/lib.rs"

[[bin]]
name = "aiguard-windows-core"
path = "src/main.rs"

[dependencies]
notify = "8.0.0"
sysinfo = "0.33.1"
tray-icon = "0.19.2"
winit = "0.29.15"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
env_logger = "0.11.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.17.1"
